@@ -9,6 +9,7 @@ BUGFIXES
 14-03-06    Fixed query for listing users with a left join (mstahv)
 
 IMPROVEMENTS
+11-04-06    Implemented observer support, example in RegisterMgr::_cmd_insert()
 07-04-06    Code for Delegate class simplified to work with installations where PHP
             is compiled with --disable-reflection (jbpros)
 06-04-06    Improved pre and post-process workflow
